--- a/wc/index.files/sheet001.htm
+++ b/wc/index.files/sheet001.htm
@@ -5622,7 +5622,10 @@ rt
  </tr>
  <tr height=19 style='height:19.0pt'>
   <td height=19 class=xl66 style='height:19.0pt;border-top:none'>法国-1.0 @ 2.050</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl76 style='border-top:none;border-left:none;font-size:16.0pt;
+  color:#9C0006;font-weight:400;text-decoration:none;text-underline-style:none;
+  text-line-through:none;font-family:宋体;border:.5pt solid windowtext;
+  background:#FFC7CE;mso-pattern:black none'>-500</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
@@ -5645,7 +5648,10 @@ rt
  <tr height=19 style='height:19.0pt'>
   <td height=19 class=xl66 style='height:19.0pt;border-top:none'>瑞士 -1.0, -1.5
   @ 1.975</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl76 style='border-top:none;border-left:none;font-size:16.0pt;
+  color:#9C0006;font-weight:400;text-decoration:none;text-underline-style:none;
+  text-line-through:none;font-family:宋体;border:.5pt solid windowtext;
+  background:#FFC7CE;mso-pattern:black none'>-500</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
@@ -5667,7 +5673,10 @@ rt
  </tr>
  <tr height=19 style='height:19.0pt'>
   <td height=19 class=xl66 style='height:19.0pt;border-top:none'>阿根廷伊朗法国瑞士4串1</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl76 style='border-top:none;border-left:none;font-size:16.0pt;
+  color:#9C0006;font-weight:400;text-decoration:none;text-underline-style:none;
+  text-line-through:none;font-family:宋体;border:.5pt solid windowtext;
+  background:#FFC7CE;mso-pattern:black none'>-100</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
@@ -5689,7 +5698,10 @@ rt
  </tr>
  <tr height=19 style='height:19.0pt'>
   <td height=19 class=xl66 style='height:19.0pt;border-top:none'>阿根廷波黑法国瑞士4串1</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl76 style='border-top:none;border-left:none;font-size:16.0pt;
+  color:#9C0006;font-weight:400;text-decoration:none;text-underline-style:none;
+  text-line-through:none;font-family:宋体;border:.5pt solid windowtext;
+  background:#FFC7CE;mso-pattern:black none'>-200</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
@@ -5711,7 +5723,10 @@ rt
  </tr>
  <tr height=19 style='height:19.0pt'>
   <td height=19 class=xl66 style='height:19.0pt;border-top:none'>波黑 @ 2.15</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl76 style='border-top:none;border-left:none;font-size:16.0pt;
+  color:#9C0006;font-weight:400;text-decoration:none;text-underline-style:none;
+  text-line-through:none;font-family:宋体;border:.5pt solid windowtext;
+  background:#FFC7CE;mso-pattern:black none'>-500</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl86 style='border-top:none;border-left:none'>-500</td>
