--- a/wc/index.files/sheet001.htm
+++ b/wc/index.files/sheet001.htm
@@ -69,7 +69,7 @@ rt
   <td colspan=2 height=31 class=xl109 width=305 style='border-right:.5pt solid black;
   height:31.0pt;width:305pt'>最后更新</td>
   <td colspan=3 class=xl106 width=223 style='border-right:.5pt solid black;
-  border-left:none;width:223pt'>20140629_0934</td>
+  border-left:none;width:223pt'>20140629_2045</td>
   <td class=xl67 width=92 style='border-left:none;width:92pt'>　</td>
   <td class=xl67 width=66 style='border-left:none;width:66pt'>　</td>
   <td class=xl67 width=52 style='border-left:none;width:52pt'>　</td>
@@ -6092,8 +6092,8 @@ rt
   <td class=xl93 style='border-top:none;border-left:none'>　</td>
   <td class=xl93 style='border-top:none;border-left:none'>　</td>
  </tr>
- <tr height=19 style='height:19.0pt'>
-  <td height=19 class=xl72 style='height:19.0pt;border-top:none'>20140627</td>
+ <tr height=0 style='display:none'>
+  <td class=xl72 style='border-top:none'>20140627</td>
   <td class=xl93 style='border-top:none;border-left:none'>0</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
@@ -6114,8 +6114,8 @@ rt
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
  </tr>
- <tr height=19 style='height:19.0pt'>
-  <td height=19 class=xl66 style='height:19.0pt;border-top:none'>奖金</td>
+ <tr height=0 style='display:none'>
+  <td class=xl66 style='border-top:none'>奖金</td>
   <td class=xl93 style='border-top:none;border-left:none;font-size:16.0pt;
   color:#9C6500;font-weight:400;text-decoration:none;text-underline-style:none;
   text-line-through:none;font-family:宋体;border:.5pt solid windowtext;
@@ -6139,8 +6139,8 @@ rt
   <td class=xl86 style='border-top:none;border-left:none'>　</td>
   <td class=xl86 style='border-top:none;border-left:none'>　</td>
  </tr>
- <tr height=19 style='height:19.0pt'>
-  <td height=19 class=xl66 style='height:19.0pt;border-top:none'>今日战绩</td>
+ <tr height=0 style='display:none'>
+  <td class=xl66 style='border-top:none'>今日战绩</td>
   <td class=xl93 style='border-top:none;border-left:none;font-size:16.0pt;
   color:#9C6500;font-weight:400;text-decoration:none;text-underline-style:none;
   text-line-through:none;font-family:宋体;border:.5pt solid windowtext;
@@ -6164,8 +6164,8 @@ rt
   <td class=xl86 style='border-top:none;border-left:none'>0</td>
   <td class=xl86 style='border-top:none;border-left:none'>0</td>
  </tr>
- <tr height=19 style='height:19.0pt'>
-  <td height=19 class=xl66 style='height:19.0pt;border-top:none'>小结</td>
+ <tr height=0 style='display:none'>
+  <td class=xl66 style='border-top:none'>小结</td>
   <td class=xl93 style='border-top:none;border-left:none;font-size:16.0pt;
   color:#9C6500;font-weight:400;text-decoration:none;text-underline-style:none;
   text-line-through:none;font-family:宋体;border:.5pt solid windowtext;
@@ -6189,8 +6189,8 @@ rt
   <td class=xl86 style='border-top:none;border-left:none'>0</td>
   <td class=xl86 style='border-top:none;border-left:none'>0</td>
  </tr>
- <tr class=xl71 height=19 style='height:19.0pt'>
-  <td height=19 class=xl69 style='height:19.0pt;border-top:none'>入金</td>
+ <tr class=xl71 height=0 style='display:none'>
+  <td class=xl69 style='border-top:none'>入金</td>
   <td class=xl93 style='border-top:none;border-left:none;font-size:16.0pt;
   color:#9C6500;font-weight:400;text-decoration:none;text-underline-style:none;
   text-line-through:none;font-family:宋体;border:.5pt solid windowtext;
@@ -6214,8 +6214,8 @@ rt
   <td class=xl71 style='border-top:none;border-left:none'>　</td>
   <td class=xl71 style='border-top:none;border-left:none'>　</td>
  </tr>
- <tr class=xl78 height=19 style='height:19.0pt'>
-  <td height=19 class=xl99 style='height:19.0pt'>哥伦比亚@2.05</td>
+ <tr class=xl78 height=0 style='display:none'>
+  <td class=xl99>哥伦比亚@2.05</td>
   <td class=xl78 style='border-top:none;font-size:16.0pt;color:#9C0006;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:宋体;border:.5pt solid windowtext;background:#FFC7CE;
@@ -6239,8 +6239,8 @@ rt
   <td class=xl78 style='border-top:none;border-left:none'>　</td>
   <td class=xl78 style='border-top:none;border-left:none'>　</td>
  </tr>
- <tr class=xl78 height=19 style='height:19.0pt'>
-  <td height=19 class=xl77 style='height:19.0pt'>巴西胜或平 @ 1.12</td>
+ <tr class=xl78 height=0 style='display:none'>
+  <td class=xl77>巴西胜或平 @ 1.12</td>
   <td class=xl78 style='border-top:none;border-left:none;font-size:16.0pt;
   color:#9C0006;font-weight:400;text-decoration:none;text-underline-style:none;
   text-line-through:none;font-family:宋体;border:.5pt solid windowtext;
@@ -6264,9 +6264,8 @@ rt
   <td class=xl78 style='border-top:none;border-left:none'>　</td>
   <td class=xl78 style='border-top:none;border-left:none'>　</td>
  </tr>
- <tr class=xl76 height=19 style='height:19.0pt'>
-  <td height=19 class=xl74 style='height:19.0pt;border-top:none'>巴西 &amp; 哥伦比亚赢
-  @ 3.14</td>
+ <tr class=xl76 height=0 style='display:none'>
+  <td class=xl74 style='border-top:none'>巴西 &amp; 哥伦比亚赢 @ 3.14</td>
   <td class=xl76 style='border-top:none;border-left:none;font-size:16.0pt;
   color:#9C0006;font-weight:400;text-decoration:none;text-underline-style:none;
   text-line-through:none;font-family:宋体;border:.5pt solid windowtext;
@@ -6290,8 +6289,8 @@ rt
   <td class=xl76 style='border-top:none;border-left:none'>　</td>
   <td class=xl76 style='border-top:none;border-left:none'>　</td>
  </tr>
- <tr class=xl76 height=19 style='height:19.0pt'>
-  <td height=19 class=xl74 style='height:19.0pt;border-top:none'>巴西荷兰哥伦比亚 @ 6.6</td>
+ <tr class=xl76 height=0 style='display:none'>
+  <td class=xl74 style='border-top:none'>巴西荷兰哥伦比亚 @ 6.6</td>
   <td class=xl76 style='border-top:none;border-left:none;font-size:16.0pt;
   color:#9C0006;font-weight:400;text-decoration:none;text-underline-style:none;
   text-line-through:none;font-family:宋体;border:.5pt solid windowtext;
@@ -6315,8 +6314,8 @@ rt
   <td class=xl76 style='border-top:none;border-left:none'>　</td>
   <td class=xl76 style='border-top:none;border-left:none'>　</td>
  </tr>
- <tr class=xl78 height=19 style='height:19.0pt'>
-  <td height=19 class=xl77 style='height:19.0pt;border-top:none'>巴西平 @ 4.5</td>
+ <tr class=xl78 height=0 style='display:none'>
+  <td class=xl77 style='border-top:none'>巴西平 @ 4.5</td>
   <td class=xl78 style='border-top:none;border-left:none;font-size:16.0pt;
   color:#9C0006;font-weight:400;text-decoration:none;text-underline-style:none;
   text-line-through:none;font-family:宋体;border:.5pt solid windowtext;
@@ -6340,9 +6339,8 @@ rt
   <td class=xl78 style='border-top:none;border-left:none'>　</td>
   <td class=xl78 style='border-top:none;border-left:none'>　</td>
  </tr>
- <tr class=xl78 height=19 style='height:19.0pt'>
-  <td height=19 class=xl77 style='height:19.0pt;border-top:none'>哥伦比亚 -0.5 @
-  2.075</td>
+ <tr class=xl78 height=0 style='display:none'>
+  <td class=xl77 style='border-top:none'>哥伦比亚 -0.5 @ 2.075</td>
   <td class=xl78 style='border-top:none;border-left:none;font-size:16.0pt;
   color:#9C0006;font-weight:400;text-decoration:none;text-underline-style:none;
   text-line-through:none;font-family:宋体;border:.5pt solid windowtext;
@@ -6366,9 +6364,8 @@ rt
   <td class=xl78 style='border-top:none;border-left:none'>　</td>
   <td class=xl78 style='border-top:none;border-left:none'>　</td>
  </tr>
- <tr class=xl78 height=19 style='height:19.0pt'>
-  <td height=19 class=xl77 style='height:19.0pt;border-top:none'>巴西v智利 &lt;2.5,
-  3.0 @ 1.85</td>
+ <tr class=xl78 height=0 style='display:none'>
+  <td class=xl77 style='border-top:none'>巴西v智利 &lt;2.5, 3.0 @ 1.85</td>
   <td class=xl78 style='border-top:none;border-left:none;font-size:16.0pt;
   color:#9C0006;font-weight:400;text-decoration:none;text-underline-style:none;
   text-line-through:none;font-family:宋体;border:.5pt solid windowtext;
@@ -6392,9 +6389,8 @@ rt
   <td class=xl78 style='border-top:none;border-left:none'>　</td>
   <td class=xl78 style='border-top:none;border-left:none'>　</td>
  </tr>
- <tr class=xl76 height=19 style='height:19.0pt'>
-  <td height=19 class=xl74 style='height:19.0pt;border-top:none'>巴西 -1.0 @
-  1.825</td>
+ <tr class=xl76 height=0 style='display:none'>
+  <td class=xl74 style='border-top:none'>巴西 -1.0 @ 1.825</td>
   <td class=xl76 style='border-top:none;border-left:none;font-size:16.0pt;
   color:#9C0006;font-weight:400;text-decoration:none;text-underline-style:none;
   text-line-through:none;font-family:宋体;border:.5pt solid windowtext;
@@ -6419,7 +6415,7 @@ rt
   <td class=xl76 style='border-top:none;border-left:none'>　</td>
  </tr>
  <tr height=19 style='height:19.0pt'>
-  <td height=19 class=xl72 style='height:19.0pt;border-top:none'>20140628</td>
+  <td height=19 class=xl72 style='height:19.0pt;border-top:none'>20140629</td>
   <td class=xl76 style='border-top:none;border-left:none'>0</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
@@ -6540,6 +6536,51 @@ rt
   <td class=xl86 style='border-top:none;border-left:none'>　</td>
   <td class=xl86 style='border-top:none;border-left:none'>　</td>
   <td class=xl86 style='border-top:none;border-left:none'>　</td>
+ </tr>
+ <tr height=19 style='height:19.0pt'>
+  <td height=19 class=xl66 style='height:19.0pt;border-top:none'>墨西哥 +0.5 @
+  1.825</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>-300</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+ </tr>
+ <tr height=19 style='height:19.0pt'>
+  <td height=19 class=xl66 style='height:19.0pt;border-top:none'>希腊 0.0 @ 2.075</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>-300</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
  </tr>
 </table>
 
