--- a/wc/index.files/sheet001.htm
+++ b/wc/index.files/sheet001.htm
@@ -69,7 +69,7 @@ rt
   <td colspan=2 height=31 class=xl109 width=305 style='border-right:.5pt solid black;
   height:31.0pt;width:305pt'>最后更新</td>
   <td colspan=3 class=xl106 width=223 style='border-right:.5pt solid black;
-  border-left:none;width:223pt'>20140629_2045</td>
+  border-left:none;width:223pt'>20140629_2145</td>
   <td class=xl67 width=92 style='border-left:none;width:92pt'>　</td>
   <td class=xl67 width=66 style='border-left:none;width:66pt'>　</td>
   <td class=xl67 width=52 style='border-left:none;width:52pt'>　</td>
@@ -6540,7 +6540,10 @@ rt
  <tr height=19 style='height:19.0pt'>
   <td height=19 class=xl66 style='height:19.0pt;border-top:none'>墨西哥 +0.5 @
   1.825</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl93 style='border-top:none;border-left:none;font-size:16.0pt;
+  color:#9C0006;font-weight:400;text-decoration:none;text-underline-style:none;
+  text-line-through:none;font-family:宋体;border:.5pt solid windowtext;
+  background:#FFC7CE;mso-pattern:black none'>-300</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
@@ -6562,7 +6565,10 @@ rt
  </tr>
  <tr height=19 style='height:19.0pt'>
   <td height=19 class=xl66 style='height:19.0pt;border-top:none'>希腊 0.0 @ 2.075</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl93 style='border-top:none;border-left:none;font-size:16.0pt;
+  color:#9C0006;font-weight:400;text-decoration:none;text-underline-style:none;
+  text-line-through:none;font-family:宋体;border:.5pt solid windowtext;
+  background:#FFC7CE;mso-pattern:black none'>-300</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
@@ -6570,6 +6576,81 @@ rt
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>-300</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+ </tr>
+ <tr height=19 style='height:19.0pt'>
+  <td height=19 class=xl66 style='height:19.0pt;border-top:none'>希腊3-1 @ 29.00</td>
+  <td class=xl93 style='border-top:none;border-left:none;font-size:16.0pt;
+  color:#9C0006;font-weight:400;text-decoration:none;text-underline-style:none;
+  text-line-through:none;font-family:宋体;border:.5pt solid windowtext;
+  background:#FFC7CE;mso-pattern:black none'>-100</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>-100</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+ </tr>
+ <tr height=19 style='height:19.0pt'>
+  <td height=19 class=xl66 style='height:19.0pt;border-top:none'>希腊 2-1 @ 12.00</td>
+  <td class=xl93 style='border-top:none;border-left:none;font-size:16.0pt;
+  color:#9C0006;font-weight:400;text-decoration:none;text-underline-style:none;
+  text-line-through:none;font-family:宋体;border:.5pt solid windowtext;
+  background:#FFC7CE;mso-pattern:black none'>-100</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>-100</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+ </tr>
+ <tr height=19 style='height:19.0pt'>
+  <td height=19 class=xl66 style='height:19.0pt;border-top:none'>希腊 3-2 @ 41.00</td>
+  <td class=xl93 style='border-top:none;border-left:none;font-size:16.0pt;
+  color:#9C0006;font-weight:400;text-decoration:none;text-underline-style:none;
+  text-line-through:none;font-family:宋体;border:.5pt solid windowtext;
+  background:#FFC7CE;mso-pattern:black none'>-100</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>-100</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
