--- a/wc/index.files/sheet001.htm
+++ b/wc/index.files/sheet001.htm
@@ -69,7 +69,7 @@ rt
   <td colspan=2 height=31 class=xl109 width=305 style='border-right:.5pt solid black;
   height:31.0pt;width:305pt'>最后更新</td>
   <td colspan=3 class=xl106 width=223 style='border-right:.5pt solid black;
-  border-left:none;width:223pt'>20140629_2145</td>
+  border-left:none;width:223pt'>20140629_2314</td>
   <td class=xl67 width=92 style='border-left:none;width:92pt'>　</td>
   <td class=xl67 width=66 style='border-left:none;width:66pt'>　</td>
   <td class=xl67 width=52 style='border-left:none;width:52pt'>　</td>
@@ -6649,6 +6649,277 @@ rt
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+ </tr>
+ <tr height=19 style='height:19.0pt'>
+  <td height=19 class=xl66 style='height:19.0pt;border-top:none'>荷兰 @ 2.10</td>
+  <td class=xl93 style='border-top:none;border-left:none;font-size:16.0pt;
+  color:#9C0006;font-weight:400;text-decoration:none;text-underline-style:none;
+  text-line-through:none;font-family:宋体;border:.5pt solid windowtext;
+  background:#FFC7CE;mso-pattern:black none'>-100</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>-100</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+ </tr>
+ <tr height=19 style='height:19.0pt'>
+  <td height=19 class=xl66 style='height:19.0pt;border-top:none'>荷兰串德国 @ 2.73</td>
+  <td class=xl93 style='border-top:none;border-left:none;font-size:16.0pt;
+  color:#9C0006;font-weight:400;text-decoration:none;text-underline-style:none;
+  text-line-through:none;font-family:宋体;border:.5pt solid windowtext;
+  background:#FFC7CE;mso-pattern:black none'>-100</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>-100</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+ </tr>
+ <tr height=19 style='height:19.0pt'>
+  <td height=19 class=xl66 style='height:19.0pt;border-top:none'>荷兰法国德国3串1 @
+  4.09</td>
+  <td class=xl93 style='border-top:none;border-left:none;font-size:16.0pt;
+  color:#9C0006;font-weight:400;text-decoration:none;text-underline-style:none;
+  text-line-through:none;font-family:宋体;border:.5pt solid windowtext;
+  background:#FFC7CE;mso-pattern:black none'>-100</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>-100</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+ </tr>
+ <tr height=19 style='height:19.0pt'>
+  <td height=19 class=xl66 style='height:19.0pt;border-top:none'>荷兰法国平德国3串1 @
+  12.01</td>
+  <td class=xl93 style='border-top:none;border-left:none;font-size:16.0pt;
+  color:#9C0006;font-weight:400;text-decoration:none;text-underline-style:none;
+  text-line-through:none;font-family:宋体;border:.5pt solid windowtext;
+  background:#FFC7CE;mso-pattern:black none'>-100</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>-100</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+ </tr>
+ <tr height=19 style='height:19.0pt'>
+  <td height=19 class=xl66 style='height:19.0pt;border-top:none'>哥斯达黎加 @ 2.8</td>
+  <td class=xl93 style='border-top:none;border-left:none;font-size:16.0pt;
+  color:#9C0006;font-weight:400;text-decoration:none;text-underline-style:none;
+  text-line-through:none;font-family:宋体;border:.5pt solid windowtext;
+  background:#FFC7CE;mso-pattern:black none'>-100</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>-100</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+ </tr>
+ <tr height=19 style='height:19.0pt'>
+  <td height=19 class=xl66 style='height:19.0pt;border-top:none'>墨西哥 @ 3.9</td>
+  <td class=xl93 style='border-top:none;border-left:none;font-size:16.0pt;
+  color:#9C0006;font-weight:400;text-decoration:none;text-underline-style:none;
+  text-line-through:none;font-family:宋体;border:.5pt solid windowtext;
+  background:#FFC7CE;mso-pattern:black none'>-100</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>-100</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+ </tr>
+ <tr height=19 style='height:19.0pt'>
+  <td height=19 class=xl66 style='height:19.0pt;border-top:none'>荷兰串德国-1.5 @
+  4.04</td>
+  <td class=xl93 style='border-top:none;border-left:none;font-size:16.0pt;
+  color:#9C0006;font-weight:400;text-decoration:none;text-underline-style:none;
+  text-line-through:none;font-family:宋体;border:.5pt solid windowtext;
+  background:#FFC7CE;mso-pattern:black none'>-100</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>-100</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+ </tr>
+ <tr height=19 style='height:19.0pt'>
+  <td height=19 class=xl66 style='height:19.0pt;border-top:none'>荷兰-0.5串德国 @
+  2.79</td>
+  <td class=xl93 style='border-top:none;border-left:none;font-size:16.0pt;
+  color:#9C0006;font-weight:400;text-decoration:none;text-underline-style:none;
+  text-line-through:none;font-family:宋体;border:.5pt solid windowtext;
+  background:#FFC7CE;mso-pattern:black none'>-100</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>-100</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+ </tr>
+ <tr height=19 style='height:19.0pt'>
+  <td height=19 class=xl66 style='height:19.0pt;border-top:none'>荷兰 &gt;
+  2.0,2.5 @ 1.950</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>-200</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+ </tr>
+ <tr height=19 style='height:19.0pt'>
+  <td height=19 class=xl66 style='height:19.0pt;border-top:none'>荷兰 2-1 @ 9.00</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>-100</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+ </tr>
+ <tr height=19 style='height:19.0pt'>
+  <td height=19 class=xl66 style='height:19.0pt;border-top:none'>哥斯达黎加 @ 2.70</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>-300</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
