--- a/wc/index.files/sheet001.htm
+++ b/wc/index.files/sheet001.htm
@@ -7534,12 +7534,12 @@ rt
   <td class=xl93 style='border-top:none;border-left:none;font-size:16.0pt;
   color:#9C0006;font-weight:400;text-decoration:none;text-underline-style:none;
   text-line-through:none;font-family:宋体;border:.5pt solid windowtext;
-  background:#FFC7CE;mso-pattern:black none'>-400</td>
+  background:#FFC7CE;mso-pattern:black none'>-700</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>-300</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl86 style='border-top:none;border-left:none'>-300</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
@@ -7560,12 +7560,12 @@ rt
   <td class=xl93 style='border-top:none;border-left:none;font-size:16.0pt;
   color:#9C0006;font-weight:400;text-decoration:none;text-underline-style:none;
   text-line-through:none;font-family:宋体;border:.5pt solid windowtext;
-  background:#FFC7CE;mso-pattern:black none'>-700</td>
+  background:#FFC7CE;mso-pattern:black none'>-1000</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>-300</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl86 style='border-top:none;border-left:none'>-300</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
@@ -7708,13 +7708,17 @@ rt
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
  </tr>
  <tr height=19 style='height:19.0pt'>
-  <td height=19 class=xl66 style='height:19.0pt;border-top:none'>　</td>
+  <td height=19 class=xl66 style='height:19.0pt;border-top:none'>比利时 &gt;
+  2.0,2.5 @ 2.025</td>
+  <td class=xl93 style='border-top:none;border-left:none;font-size:16.0pt;
+  color:#9C0006;font-weight:400;text-decoration:none;text-underline-style:none;
+  text-line-through:none;font-family:宋体;border:.5pt solid windowtext;
+  background:#FFC7CE;mso-pattern:black none'>-300</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>-300</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
