--- a/wc/index.files/sheet001.htm
+++ b/wc/index.files/sheet001.htm
@@ -8025,7 +8025,7 @@ rt
   <td class=xl76 style='border-top:none;border-left:none;font-size:16.0pt;
   color:#9C0006;font-weight:400;text-decoration:none;text-underline-style:none;
   text-line-through:none;font-family:宋体;border:.5pt solid windowtext;
-  background:#FFC7CE;mso-pattern:black none'>-800</td>
+  background:#FFC7CE;mso-pattern:black none'>-900</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
@@ -8033,7 +8033,7 @@ rt
   <td class=xl67 style='border-top:none;border-left:none'>-300</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>-100</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>-500</td>
@@ -8051,7 +8051,7 @@ rt
   <td class=xl76 style='border-top:none;border-left:none;font-size:16.0pt;
   color:#9C0006;font-weight:400;text-decoration:none;text-underline-style:none;
   text-line-through:none;font-family:宋体;border:.5pt solid windowtext;
-  background:#FFC7CE;mso-pattern:black none'>-800</td>
+  background:#FFC7CE;mso-pattern:black none'>-900</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
@@ -8059,7 +8059,7 @@ rt
   <td class=xl67 style='border-top:none;border-left:none'>-300</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>-100</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>-500</td>
